--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <body>
 	<nav class="nav-bar">
 		<a href="#home">Home</a>
-		<a href="#non-polar aliphatic">Non-Polar Aliphatic <br> Amino Acids</a>
-		<a href="#non-polar aromatic">Non-Polar Aromatic <br> Amino Acids</a>
+		<a href="#aliphatic">Non-Polar Aliphatic <br> Amino Acids</a>
+		<a href="#aromatic">Non-Polar Aromatic <br> Amino Acids</a>
 		<a href="#polar">Polar Amino Acids</a>
 		<a href="#negatively-charged">Negatively-Charged <br> Amino Acids</a>
 		<a href="#positively-charged">Positively-Charged <br> Amino Acids</a>
